--- a/boot/Cargo.toml
+++ b/boot/Cargo.toml
@@ -4,7 +4,7 @@ cargo-features = ["per-package-target"]
 name = "kernel"
 version = "0.1.0"
 edition = "2021"
-forced-target = "os-target.json"
+forced-target = "x86_64-unknown-none"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
