--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "rust-analyzer.checkOnSave.allTargets": false
+    "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.checkOnSave.extraArgs": [
+        "-Zbuild-std=core,alloc",
+        "-Zbuild-std-features=compiler-builtins-mem",
+        "--target=boot-sector.json"
+    ]
 }
