going to work on moving to protected mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ codegen-units = 1
 lto = true
 opt-level = 3
 strip = true
+
+[profile.release.package.boot]
+opt-level = "z" # Since we're limited to 510 bytes, we need to be as small as possible
