--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.cargo.target": "boot-sector.json",
     "rust-analyzer.checkOnSave.extraArgs": [
         "-Zbuild-std=core,panic_abort",
-        "-Zbuild-std-features=compiler-builtins-mem",
-        "--target=boot-sector.json"
+        "-Zbuild-std-features=compiler-builtins-mem"
     ]
 }
